updating research_agent

--- a/research_agent.ipynb
+++ b/research_agent.ipynb
@@ -1316,7 +1316,7 @@
    "outputs": [],
    "source": [
     "output = runnable.invoke({\n",
-    "    'input': 'tell me about effects of sauna on menstrual cycle',\n",
+    "    'input': 'What is the potential of AI in fintech companies?',\n",
     "    'chat_history': []  \n",
     "})\n"
    ]
@@ -1338,7 +1338,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c125a908",
+   "id": "cc830976",
    "metadata": {},
    "outputs": [],
    "source": []
