--- a/research_agent.ipynb
+++ b/research_agent.ipynb
@@ -5,7 +5,7 @@
    "id": "647aa335",
    "metadata": {},
    "source": [
-    "# Master Project: Build a Research Agent with LangGraph, GPT-4o, RAG, Pinecone, ArXiv and Google SerpAPI"
+    "# Master Project: Research Agent with LangGraph, GPT-4o, RAG, Pinecone, ArXiv and Google SerpAPI"
    ]
   },
   {
